adding create/delete/get methods, some progress, more to come
